to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.

7/30/2001: mkoeppe
	   Partial merge from the CVS trunk.  The Source/DOH directory
	   and most of the Source/Swig directory is up-to-date now.

7/29/2001: beazley
           %readonly and %readwrite have been turned into SWIG pragmas.
           %pragma(swig) readonly and %pragma(swig) readwrite.  Macros
           are used to provide backwards compatibility.

7/29/2001: beazley
           Minor changes to %pragma directive.  %pragma must always
           be directed to a specific language.  For example:

              %pragma(swig) make_default;
              %pragma(perl5) include = "blah.i";

           Also extended the pragma directive to allow code blocks
 
              %pragma(foo) code = %{
                  ... some code ...
              %}

           *** POTENTIAL INCOMPATIBILITY ***

7/29/2001: beazley
           'const' variables are no longer wrapped as constants.
           Instead, they are wrapped as read-only variables.
           *** POTENTIAL INCOMPATIBILITY ***           

7/29/2001: beazley
           Reorganization and simplification of type parsing.
           Types with 'const' should work correctly now.

7/29/2001: beazley
           Most swig directives related to the documentation system
           are now deprecated.

7/29/2001: beazley
           Removed support for Objective-C in order to simplify
           parser reconstruction.  Will return if there is sufficient
           demand.
           *** POTENTIAL INCOMPATIBILITY ***

7/29/2001: beazley
           Code inclusion has been modified in the parser.  A common