@@ -9,7 +9,13 @@
 %insert(runtime) "guile.swg"
 #endif
 
-#define %scheme(text) %pragma(guile) scheme = text;
+#define %scheme	    %insert("scheme")
+
+#define %values_as_list   %pragma(guile) beforereturn ""
+#define %values_as_vector %pragma(guile) beforereturn "GUILE_MAYBE_VECTOR"
+#define %multiple_values  %pragma(guile) beforereturn "GUILE_MAYBE_VALUES"
+
+
 
 /* Read in standard typemaps. */
 %include "typemaps.i"
